--- a/web/acessoRestrito.xhtml
+++ b/web/acessoRestrito.xhtml
@@ -57,7 +57,7 @@
                 <h:form>
                     <div class="btn" id="btn">
                         <h:commandButton value="Voltar" class="btn btn-block btn-primary"
-                                         action="#{c_Login.logoutSession}"/>
+                                         action="#{loginController.logoutSession}"/>
                     </div>
                 </h:form>
             </div>
