--- a/web/meusDados.xhtml
+++ b/web/meusDados.xhtml
@@ -74,7 +74,7 @@
     <i><h1 align="center"> BiblioTec </h1></i>
     <h:form>
         <p:menubar style="align-items: center">
-            <p:menuitem value="MENU INICIAL" action="#{c_Usuario.chamaMenuInicial}"></p:menuitem>
+            <p:menuitem value="MENU INICIAL" action="#{usuarioController.chamaMenuInicial}"></p:menuitem>
         </p:menubar>
     </h:form>
     <div class="jumbotron" id="table">
@@ -83,14 +83,15 @@
                 <h5 align="center">Dados Atuais</h5>
                 <table class="order-table">
                     <tbody>
-                    <ui:repeat var="dados" value="#{c_Usuario.userDAO.meusDados()}" varStatus="status">
+                    <ui:repeat var="dados" value="#{usuarioController.userDAO.meusDados()}" varStatus="status">
                         <p:panelGrid rendered="#{status.first}">
                             <tr>
                                 <h:outputLabel value="Nome"/>
                                 <p:outputLabel style="width: 550px" value="#{dados.nome}" class="form-control"/>
                                 <h:outputLabel value="Usuário"/>
                                 <p:outputLabel style="width: 550px" value="#{dados.usuario}" class="form-control"/>
-                                <h:outputLabel value="Senha"/>
+                                <h:outputLabel value="Senha "/>
+                                <h:outputLabel style="color: red" value=" (criptografada)"/>
                                 <p:outputLabel style="width: 550px" value="#{dados.senha}" class="form-control"/>
                                 <h:outputLabel value="RG"/>
                                 <p:outputLabel style="width: 550px" value="#{dados.rg}" class="form-control"/>
@@ -125,27 +126,38 @@
                 </p>
 
                 <h:outputLabel value="Nome"/>
-                <p:inputText maxlength="60" style="width: 550px" value="#{c_Usuario.user.nome}" class="form-control" placeholder="Insira seu nome"/>
+                <p:inputText maxlength="60" style="width: 550px" value="#{usuarioController.user.nome}"
+                             class="form-control" placeholder="Insira seu nome"/>
                 <h:outputLabel value="Usuário"/>
-                <p:inputText maxlength="30" style="width: 550px" value="#{c_Usuario.user.usuario}" class="form-control" placeholder="Insira seu username de acesso"/>
+                <p:inputText maxlength="30" style="width: 550px" value="#{usuarioController.user.usuario}"
+                             class="form-control" placeholder="Insira seu username de acesso"/>
                 <h:outputLabel value="Senha"/>
-                <p:inputText maxlength="30" style="width: 550px" value="#{c_Usuario.user.senha}" class="form-control" placeholder="Insira uma nova senha"/>
+                <p:inputText maxlength="30" style="width: 550px" value="#{usuarioController.user.senha}"
+                             class="form-control" placeholder="Insira uma nova senha"/>
                 <h:outputLabel value="RG"/>
-                <p:inputMask class="form-control" value="#{c_Usuario.user.rg}" mask="99.999.999-9" placeholder="Insira o seu RG(somente números)" maxlength="12"/>
+                <p:inputMask class="form-control" value="#{usuarioController.user.rg}" mask="99.999.999-9"
+                             placeholder="Insira o seu RG(somente números)" maxlength="12"/>
                 <h:outputLabel value="CPF"/>
-                <p:inputMask class="form-control" value="#{c_Usuario.user.cpf}" mask="999.999.999-99" placeholder="Insira o seu CPF(somente números)" maxlength="14"/>
+                <p:inputMask class="form-control" value="#{usuarioController.user.cpf}" mask="999.999.999-99"
+                             placeholder="Insira o seu CPF(somente números)" maxlength="14"/>
                 <h:outputLabel value="E-mail"/>
-                <p:inputText maxlength="100" style="width: 550px" value="#{c_Usuario.user.email}" class="form-control" placeholder="Insira seu e-mail"/>
+                <p:inputText maxlength="100" style="width: 550px" value="#{usuarioController.user.email}"
+                             class="form-control" placeholder="Insira seu e-mail"/>
                 <h:outputLabel value="Endereço"/>
-                <p:inputText maxlength="100" style="width: 550px" value="#{c_Usuario.user.endereco}" class="form-control" placeholder="Insira seu endereço"/>
+                <p:inputText maxlength="100" style="width: 550px" value="#{usuarioController.user.endereco}"
+                             class="form-control" placeholder="Insira seu endereço"/>
                 <h:outputLabel value="CEP"/>
-                <p:inputMask class="form-control" value="#{c_Usuario.user.cep}" mask="99999-999" placeholder="Insira o CEP da sua rua(somente números)" maxlength="8"/>
+                <p:inputMask class="form-control" value="#{usuarioController.user.cep}" mask="99999-999"
+                             placeholder="Insira o CEP da sua rua(somente números)" maxlength="8"/>
                 <h:outputLabel value="Cidade"/>
-                <p:inputText maxlength="60" style="width: 550px" value="#{c_Usuario.user.cidade}" class="form-control" placeholder="Insira sua cidade"/>
+                <p:inputText maxlength="60" style="width: 550px" value="#{usuarioController.user.cidade}"
+                             class="form-control" placeholder="Insira sua cidade"/>
                 <h:outputLabel value="Estado"/>
-                <p:inputMask class="form-control" value="#{c_Usuario.user.estado}" mask="aa" placeholder="Insira a sigla do Estado onde mora" maxlength="2"/>
+                <p:inputMask class="form-control" value="#{usuarioController.user.estado}" mask="aa"
+                             placeholder="Insira a sigla do Estado onde mora" maxlength="2"/>
                 <h:outputLabel value="Data de Nascimento"/>
-                <p:inputMask maxlength="10" class="form-control" value="#{c_Usuario.user.datanasc}" mask="99/99/9999" placeholder="DD/MM/AAAA"/>
+                <p:inputMask maxlength="10" class="form-control" value="#{usuarioController.user.datanasc}"
+                             mask="99/99/9999" placeholder="DD/MM/AAAA"/>
                 <br/>
                 <div id="conf" class="conf">
                     <p align="center">
@@ -158,7 +170,7 @@
                     <h:form>
                         <div class="form-group">
                             <h:commandButton value="Sim" class="btn btn-block btn-primary"
-                                             action="#{c_Usuario.realizaAtualizacaoMeusDados}"/>
+                                             action="#{usuarioController.realizaAtualizacaoMeusDados}"/>
                         </div>
                         <div class="form-group">
                             <h:commandButton value="Não" class="btn btn-block btn-primary"
@@ -172,5 +184,6 @@
             </h:form>
         </section>
     </div>
+    #{usuarioController.user.msg_autenticacao = ''}
 </h:body>
 </html>
