--- a/web/acessoBalconista.xhtml
+++ b/web/acessoBalconista.xhtml
@@ -117,22 +117,24 @@
     <!--RETORNOS-->
     <div align="left" class="retornos" id="retornos">
         <b>
-            <font color="#{c_Usuario.user.color_msg}">
-                #{c_Usuario.user.msg_autenticacao}
+            <font color="#{usuarioController.user.color_msg}">
+                #{usuarioController.user.msg_autenticacao}
             </font>
-            <font color="#{c_Emprestimo.emp.color_msg_retorno}">
-                #{c_Emprestimo.emp.msg_retorno}
+            <font color="#{emprestimoController.emp.color_msg_retorno}">
+                #{emprestimoController.emp.msg_retorno}
             </font>
-            <font color="#{c_Livro.livro.color_msg_retorno}">
-                #{c_Livro.livro.msg_retorno}
+            <font color="#{livroController.livro.color_msg_retorno}">
+                #{livroController.livro.msg_retorno}
             </font>
         </b>
     </div>
     <i><h1 align="center"> BiblioTec </h1></i>
     <h:form>
         <p:menubar style="align-items: center">
-            <p:menuitem value="SAIR" action="#{c_Login.logoutSession}"/>
+            <p:menuitem value="SAIR" action="#{loginController.logoutSession}"/>
             <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
+            <p:menuitem rendered="#{emprestimoController.consultaQtdeEmpAtrasados() != 0}" style="color: red;"
+                        value="PENDÊNCIAS" action="meusEmprestimos?faces-redirect=true"></p:menuitem>
         </p:menubar>
     </h:form>
     <div class="usuarios" id="usuarios">
@@ -245,32 +247,32 @@
             </h:form>
         </section>
         <div class="reset">
-            #{c_Usuario.user.msg_autenticacao = ''}
-            #{c_Usuario.user.color_msg = ''}
-            #{c_Emprestimo.emp.msg_retorno = ''}
-            #{c_Emprestimo.emp.color_msg_retorno = ''}
-            #{c_Emprestimo.emp.codusuario = ''}
-            #{c_Emprestimo.emp.codemprestimo = ''}
-            #{c_Usuario.user.nome = ''}
-            #{c_Usuario.user.usuario = ''}
-            #{c_Usuario.user.senha = ''}
-            #{c_Usuario.user.rg = ''}
-            #{c_Usuario.user.cpf = ''}
-            #{c_Usuario.user.email = ''}
-            #{c_Usuario.user.endereco = ''}
-            #{c_Usuario.user.cep = ''}
-            #{c_Usuario.user.cidade = ''}
-            #{c_Usuario.user.estado = ''}
-            #{c_Usuario.user.datanasc = ''}
-            #{c_Usuario.user.permissao = ''}
-            #{c_Usuario.user.ativo = -1}
-            #{c_Usuario.user.codusuario = ''}
-            #{c_Livro.livro.msg_retorno = ''}
-            #{c_Livro.livro.codlivro = -1}
-            #{c_Livro.livro.titulo = ''}
-            #{c_Emprestimo.emp.codlivro = -1}
-            #{c_Emprestimo.emp.datadev = ''}
-            #{c_Emprestimo.emp.nome_user = ''}
+            #{usuarioController.user.msg_autenticacao = ''}
+            #{usuarioController.user.color_msg = ''}
+            #{emprestimoController.emp.msg_retorno = ''}
+            #{emprestimoController.emp.color_msg_retorno = ''}
+            #{emprestimoController.emp.codusuario = ''}
+            #{emprestimoController.emp.codemprestimo = -1}
+            #{usuarioController.user.nome = ''}
+            #{usuarioController.user.usuario = ''}
+            #{usuarioController.user.senha = ''}
+            #{usuarioController.user.rg = ''}
+            #{usuarioController.user.cpf = ''}
+            #{usuarioController.user.email = ''}
+            #{usuarioController.user.endereco = ''}
+            #{usuarioController.user.cep = ''}
+            #{usuarioController.user.cidade = ''}
+            #{usuarioController.user.estado = ''}
+            #{usuarioController.user.datanasc = ''}
+            #{usuarioController.user.permissao = ''}
+            #{usuarioController.user.ativo = -1}
+            #{usuarioController.user.codusuario = ''}
+            #{livroController.livro.msg_retorno = ''}
+            #{livroController.livro.codlivro = -1}
+            #{livroController.livro.titulo = ''}
+            #{emprestimoController.emp.codlivro = -1}
+            #{emprestimoController.emp.datadev = ''}
+            #{emprestimoController.emp.nome_user = ''}
         </div>
     </div>
 </h:body>
