--- a/web/acessoBibliotecario.xhtml
+++ b/web/acessoBibliotecario.xhtml
@@ -103,11 +103,11 @@
 <h:body>
     <div align="left" class="retornos" id="retornos">
         <b>
-            <font color="#{c_Livro.livro.color_msg_retorno}">
-                #{c_Livro.livro.msg_retorno}
+            <font color="#{livroController.livro.color_msg_retorno}">
+                #{livroController.livro.msg_retorno}
             </font>
-            <font color="#{c_Usuario.user.color_msg}">
-                #{c_Usuario.user.msg_autenticacao}
+            <font color="#{usuarioController.user.color_msg}">
+                #{usuarioController.user.msg_autenticacao}
             </font>
         </b>
     </div>
@@ -116,8 +116,10 @@
     <div id="menu" class="menu">
         <h:form>
             <p:menubar style="align-items: center">
-                <p:menuitem value="SAIR" action="#{c_Login.logoutSession}"/>
+                <p:menuitem value="SAIR" action="#{loginController.logoutSession}"/>
                 <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
+                <p:menuitem rendered="#{emprestimoController.consultaQtdeEmpAtrasados() != 0}" style="color: red;"
+                            value="PENDÊNCIAS" action="meusEmprestimos?faces-redirect=true"></p:menuitem>
             </p:menubar>
         </h:form>
     </div>
@@ -200,21 +202,28 @@
             </p>
         </div>
         <div class="resetValues">
-            #{c_Usuario.user.msg_autenticacao = ''}
-            #{c_Usuario.user.nome = ''}
-            #{c_Usuario.user.usuario = ''}
-            #{c_Usuario.user.senha = ''}
-            #{c_Usuario.user.rg = ''}
-            #{c_Usuario.user.cpf = ''}
-            #{c_Usuario.user.email = ''}
-            #{c_Usuario.user.endereco = ''}
-            #{c_Usuario.user.cep = ''}
-            #{c_Usuario.user.cidade = ''}
-            #{c_Usuario.user.estado = ''}
-            #{c_Usuario.user.datanasc = ''}
-            #{c_Livro.livro.msg_retorno = ''}
-            #{c_Livro.livro.codlivro = -1}
-            #{c_Livro.livro.titulo = ''}
+            #{usuarioController.user.msg_autenticacao = ''}
+            #{usuarioController.user.nome = ''}
+            #{usuarioController.user.usuario = ''}
+            #{usuarioController.user.senha = ''}
+            #{usuarioController.user.rg = ''}
+            #{usuarioController.user.cpf = ''}
+            #{usuarioController.user.email = ''}
+            #{usuarioController.user.endereco = ''}
+            #{usuarioController.user.cep = ''}
+            #{usuarioController.user.cidade = ''}
+            #{usuarioController.user.estado = ''}
+            #{usuarioController.user.datanasc = ''}
+            #{livroController.livro.msg_retorno = ''}
+            #{livroController.livro.titulo = ''}
+            #{livroController.livro.cidade = ''}
+            #{livroController.livro.anolancamento = ''}
+            #{livroController.livro.volume = ''}
+            #{livroController.livro.codcatalogacao = ''}
+            #{livroController.livro.numchamada = ''}
+            #{livroController.livro.codlivro = 0}
+            #{livroController.livro.disponibilidade = -1}
+            #{livroController.livro.ativo = -1}
         </div>
     </div>
 </h:body>
