--- a/web/cadastrarEmprestimo.xhtml
+++ b/web/cadastrarEmprestimo.xhtml
@@ -121,26 +121,28 @@
                 </div>
                 <p:outputLabel value="Usuários"/><font color="red">*</font>
                 <h:form id="Empréstimo">
-                    <p:selectOneMenu filter="true" value="#{c_Emprestimo.emp.codusuario}" filterMatchMode="contains"
+                    <p:selectOneMenu filter="true" value="#{emprestimoController.emp.codusuario}"
+                                     filterMatchMode="contains"
                                      required="true" style="width:1290px" panelStyle="width:1290px">
 
                         <f:selectItem noSelectionOption="true" itemLabel="Selecione um usuário"/>
-                        <f:selectItems value="#{c_Emprestimo.consultaUsuariosEmprestimo()}" var="user"
+                        <f:selectItems value="#{emprestimoController.consultaUsuariosEmprestimo()}" var="user"
                                        itemLabel="Nome: #{user.nome} | CPF: #{user.cpf} | E-Mail: #{user.email} | RG: #{user.rg} | Dt. Nasc.: #{user.datanasc}"
                                        itemValue="#{user.codusuario}"/>
                     </p:selectOneMenu>
 
                     <p:outputLabel value="Livros"/><font color="red">*</font>
-                    <p:selectOneMenu filter="true" value="#{c_Emprestimo.emp.codlivro}" filterMatchMode="contains"
+                    <p:selectOneMenu filter="true" value="#{emprestimoController.emp.codlivro}"
+                                     filterMatchMode="contains"
                                      required="true" style="width:1290px" panelStyle="width:1290px">
                         <f:selectItem noSelectionOption="true" itemLabel="Selecione um livro"/>
-                        <f:selectItems value="#{c_Emprestimo.consultaLivrosEmprestimo()}" var="book"
+                        <f:selectItems value="#{emprestimoController.consultaLivrosEmprestimo()}" var="book"
                                        itemLabel="Título: #{book.titulo} | Autor: #{book.autor} | Editora: #{book.editora} | Ano Lanç.: #{book.anolancamento} - Cód. Catal: #{book.codcatalogacao}"
                                        itemValue="#{book.codlivro}"/>
                     </p:selectOneMenu>
                     <div class="form-group">
                         <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
-                                         action="#{c_Emprestimo.realizaCadastroEmprestimo}"/>
+                                         action="#{emprestimoController.realizaCadastroEmprestimo}"/>
                     </div>
                 </h:form>
             </div>
