--- a/web/cancelarReserva.xhtml
+++ b/web/cancelarReserva.xhtml
@@ -91,7 +91,7 @@
     <i><h1 align="center"> BiblioTec </h1></i>
     <h:form>
         <p:menubar style="align-items: center">
-            <p:menuitem value="MENU INICIAL" action="#{c_Usuario.chamaMenuInicial}"></p:menuitem>
+            <p:menuitem value="MENU INICIAL" action="#{usuarioController.chamaMenuInicial}"></p:menuitem>
             <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
         </p:menubar>
     </h:form>
@@ -101,11 +101,11 @@
 
                 <p:outputLabel value="Reservas"/><font color="red">*</font>
                 <h:form id="Empréstimo">
-                    <p:selectOneMenu filter="true" value="#{c_Livro.livro.codlivro}" filterMatchMode="contains"
+                    <p:selectOneMenu filter="true" value="#{livroController.livro.codlivro}" filterMatchMode="contains"
                                      required="true" style="width:1290px" panelStyle="width:1330px">
 
                         <f:selectItem noSelectionOption="true" itemLabel="Selecione a reserva desejada"/>
-                        <f:selectItems value="#{c_Livro.realizaConsultaReservas()}" var="reserva"
+                        <f:selectItems value="#{livroController.realizaConsultaReservas()}" var="reserva"
                                        itemLabel="Título: #{reserva.titulo} | Autor: #{reserva.autor} | Editora: #{reserva.editora} | Ano Lanç.: #{reserva.anolancamento} | Volume: #{reserva.volume} | Dt. Retirada: #{reserva.datares}"
                                        itemValue="#{reserva.codlivro}"/>
                     </p:selectOneMenu>
@@ -116,7 +116,7 @@
                         <h:form>
                             <div class="form-group">
                                 <h:commandButton value="Sim" class="btn btn-block btn-primary"
-                                                 action="#{c_Livro.realizaCancelamentoReserva}"/>
+                                                 action="#{livroController.realizaCancelamentoReserva}"/>
                             </div>
                             <div class="form-group">
                                 <h:commandButton value="Não" class="btn btn-block btn-primary"
