--- a/web/consultaUsuario.xhtml
+++ b/web/consultaUsuario.xhtml
@@ -115,18 +115,18 @@
                     <h:form id="telaConsultaUsuarios">
                         <div class="form-group" style="width: 1300px">
                             <h:outputLabel value="Nome do Usuário, Username, E-Mail ou CPF"/>
-                            <p:inputText value="#{c_Usuario.user.nome}" class="form-control" required="false"
+                            <p:inputText value="#{usuarioController.user.nome}" class="form-control" required="false"
                                          maxlength="100" placeholder="Insira o nome do usuário, username, e-mail ou cpf"></p:inputText>
                         </div>
                         <div class="form-group" style="width: 1300px">
                             <h:commandButton value="Buscar" class="btn btn-block btn-primary"
-                                             action="#{c_Usuario.realizaConsultaUsuario}"></h:commandButton>
+                                             action="#{usuarioController.realizaConsultaUsuario}"></h:commandButton>
                         </div>
                     </h:form>
 
                     <h:form>
                         <p:dataTable id="tbl" class="tbl" var="usuario"
-                                     value="#{c_Usuario.realizaConsultaUsuario()}"
+                                     value="#{usuarioController.realizaConsultaUsuario()}"
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {Exporters}"
                                      paginator="true" rows="5"
                                      scrollWidth="900">
