--- a/web/consultarAcervoBalconista.xhtml
+++ b/web/consultarAcervoBalconista.xhtml
@@ -90,18 +90,18 @@
             <h:form id="telaConsultaVisitante">
                 <div class="form-group">
                     <h:outputLabel value="Título, Autor ou Editora"/>
-                    <p:inputText value="#{c_Livro.livro.titulo}" class="form-control" required="false"
+                    <p:inputText value="#{livroController.livro.titulo}" class="form-control" required="false"
                                  maxlength="100" placeholder="Insira o título, autor ou editora do livro desejado"></p:inputText>
                 </div>
                 <div class="form-group">
                     <h:commandButton value="Consultar" class="btn btn-block btn-primary"
-                                     action="#{c_Livro.realizarConsultaLivro}"/>
+                                     action="#{livroController.realizarConsultaLivro}"/>
                 </div>
             </h:form>
             <section alig="center" class="row">
                 <h:form>
                     <p:dataTable id="tbl" class="tbl" var="livro"
-                                 value="#{c_Livro.realizarConsultaLivro()}"
+                                 value="#{livroController.realizarConsultaLivro()}"
                                  paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {Exporters}"
                                  paginator="true" rows="5"
                                  scrollWidth="1300">
