--- a/web/editarUsuario.xhtml
+++ b/web/editarUsuario.xhtml
@@ -101,7 +101,7 @@
     </script>
 </h:head>
 <h:body>
-    #{c_Usuario.user.nome = ''}
+    #{usuarioController.user.nome = ''}
     <style type="text/css">
         .value {
             font-weight: bold;
@@ -145,18 +145,18 @@
                 <h:form id="telaConsultaUsuarios">
                     <div class="form-group" style="width: 1300px">
                         <h:outputLabel value="Nome do Usuário, Username, E-Mail ou CPF"/>
-                        <p:inputText value="#{c_Usuario.user.nome}" class="form-control" required="false"
+                        <p:inputText value="#{usuarioController.user.nome}" class="form-control" required="false"
                                      maxlength="100" placeholder="Insira o nome do usuário, username, e-mail ou cpf"></p:inputText>
                     </div>
                     <div class="form-group" style="width: 1300px">
                         <h:commandButton value="Buscar" class="btn btn-block btn-primary"
-                                         action="#{c_Usuario.realizaConsultaUsuario}"></h:commandButton>
+                                         action="#{usuarioController.realizaConsultaUsuario}"></h:commandButton>
                     </div>
                 </h:form>
 
                 <h:form>
                     <p:dataTable id="tbl" class="tbl" var="usuario"
-                                 value="#{c_Usuario.realizaConsultaUsuario()}"
+                                 value="#{usuarioController.realizaConsultaUsuario()}"
                                  paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {Exporters}"
                                  paginator="true" rows="5"
                                  scrollWidth="2000">
@@ -251,67 +251,70 @@
                         <p:dataExporter type="xls" target="tbl" fileName="relaçãoUsuários" pageOnly="true"/>
                     </h:commandLink>
                 </h:form>
-                    #{c_Usuario.user.nome = ""}
-                    #{c_Usuario.user.usuario = ""}
-                    #{c_Usuario.user.cpf = ""}
-                    #{c_Usuario.user.email = ""}
+                #{usuarioController.user.nome = ""}
+                #{usuarioController.user.usuario = ""}
+                #{usuarioController.user.cpf = ""}
+                #{usuarioController.user.email = ""}
                     <h:form id="alterarUsuario" style="width: 1315px">
                         <p align="center">
                             <font color="red">**Inserir as informações apenas nos campos que deseja alterar**</font>
                         </p>
 
                         <h:outputLabel value="Nome Completo"/>
-                        <p:inputMask class="form-control" value="#{c_Usuario.user.nome}" required="false"
+                        <p:inputMask class="form-control" value="#{usuarioController.user.nome}" required="false"
                                      placeholder="Insira o seu nome completo" maxlength="60"/>
 
                         <h:outputLabel value="Username"/>
-                        <p:inputText value="#{c_Usuario.user.usuario}" class="form-control"
+                        <p:inputText value="#{usuarioController.user.usuario}" class="form-control"
                                      required="false" placeholder="Insira o username de acesso" maxlength="30"></p:inputText>
 
                         <h:outputLabel value="Senha"/>
-                        <p:inputText value="#{c_Usuario.user.senha}" class="form-control"
+                        <p:inputText value="#{usuarioController.user.senha}" class="form-control"
                                      required="false" placeholder="Insira a senha de acesso" maxlength="30"></p:inputText>
 
                         <h:outputLabel value="RG"/>
-                        <p:inputMask class="form-control" value="#{c_Usuario.user.rg}" mask="9999999999" required="false"
-                                     placeholder="Insira o seu RG(somente números)" maxlength="10"/>
+                        <p:inputMask class="form-control" value="#{usuarioController.user.rg}" mask="99.999.999-9"
+                                     required="false"
+                                     placeholder="Insira o seu RG(somente números)" maxlength="12"/>
 
                         <h:outputLabel value="CPF"/>
-                        <p:inputMask class="form-control" value="#{c_Usuario.user.cpf}" mask="999999999999999"
-                                     required="false" placeholder="Insira o seu CPF(somente números)" maxlength="15"/>
+                        <p:inputMask class="form-control" value="#{usuarioController.user.cpf}" mask="999.999.999-99"
+                                     required="false" placeholder="Insira o seu CPF(somente números)" maxlength="14"/>
 
                         <h:outputLabel value="Endereço"/>
-                        <p:inputText value="#{c_Usuario.user.endereco}" class="form-control"
+                        <p:inputText value="#{usuarioController.user.endereco}" class="form-control"
                                      required="false"
                                      placeholder="Insira os dados do seu endereço(ex: rua, bairro, número, etc...)"
                                      maxlength="100"></p:inputText>
 
                         <h:outputLabel value="CEP"/>
-                        <p:inputMask class="form-control" value="#{c_Usuario.user.cep}" mask="99999-999" required="false"
+                        <p:inputMask class="form-control" value="#{usuarioController.user.cep}" mask="99999-999"
+                                     required="false"
                                      placeholder="Insira o CEP da sua rua(somente números)" maxlength="8"/>
 
                         <h:outputLabel value="Cidade"/>
-                        <p:inputText value="#{c_Usuario.user.cidade}" class="form-control"
+                        <p:inputText value="#{usuarioController.user.cidade}" class="form-control"
                                      required="false" placeholder="Insira a cidade onde mora" maxlength="60"></p:inputText>
 
                         <h:outputLabel value="Estado"/>
-                        <p:inputMask class="form-control" value="#{c_Usuario.user.estado}" mask="aa" required="false"
+                        <p:inputMask class="form-control" value="#{usuarioController.user.estado}" mask="aa"
+                                     required="false"
                                      placeholder="Insira a sigla do Estado onde mora" maxlength="2"/>
 
                         <h:outputLabel value="E-mail"/>
-                        <p:inputText value="#{c_Usuario.user.email}" class="form-control"
+                        <p:inputText value="#{usuarioController.user.email}" class="form-control"
                                      required="false" placeholder="Insira seu endereço de e-mail"
                                      maxlength="100"></p:inputText>
 
                         <h:outputLabel value="Data Nascimento"/>
-                        <p:inputMask class="form-control" value="#{c_Usuario.user.datanasc}" mask="99/99/9999"
+                        <p:inputMask class="form-control" value="#{usuarioController.user.datanasc}" mask="99/99/9999"
                                      required="false" placeholder="DD/MM/AAAA" maxlength="10"/>
 
 
                         <h:outputText value="Perfil de Usuário"/><font color="red">*</font>
                         <div align="left" class="form-group">
                             <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
-                                <p:selectOneButton value="#{c_Usuario.user.permissao}" required="true">
+                                <p:selectOneButton value="#{usuarioController.user.permissao}" required="true">
                                     <f:selectItem itemLabel="Bibliotecário" itemValue='1'/>
                                     <f:selectItem itemLabel="Balconista" itemValue='2'/>
                                     <f:selectItem itemLabel="Aluno" itemValue='3'/>
@@ -322,7 +325,7 @@
                         <h:outputText value="Status do Usuário"/><font color="red">*</font>
                         <div align="left" class="form-group">
                             <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
-                                <p:selectOneButton value="#{c_Usuario.user.ativo}" required="true">
+                                <p:selectOneButton value="#{usuarioController.user.ativo}" required="true">
                                     <f:selectItem itemLabel="Ativar" itemValue='1'/>
                                     <f:selectItem itemLabel="Inativar" itemValue='0'/>
                                 </p:selectOneButton>
@@ -331,7 +334,7 @@
 
                         <div class="form-group">
                             <h:outputLabel value="Id do Usuário"/><font color="red">*</font>
-                            <p:inputText value="#{c_Usuario.user.codusuario}" class="form-control"
+                            <p:inputText value="#{usuarioController.user.codusuario}" class="form-control"
                                          required="true" placeholder="Insira o Id do usuário"></p:inputText>
                         </div>
                         <div class="form-group">
@@ -344,7 +347,7 @@
                                 <h:form>
                                     <div class="form-group">
                                         <h:commandButton value="Sim" class="btn btn-block btn-primary"
-                                                         action="#{c_Usuario.realizaEdicaoUsuario}"/>
+                                                         action="#{usuarioController.realizaEdicaoUsuario}"/>
                                     </div>
                                     <div class="form-group">
                                         <h:commandButton value="Não" class="btn btn-block btn-primary"
