--- a/web/meusEmprestimos.xhtml
+++ b/web/meusEmprestimos.xhtml
@@ -18,14 +18,14 @@
     <i><h1 align="center"> BiblioTec </h1></i>
     <h:form>
         <p:menubar style="align-items: center">
-            <p:menuitem value="MENU INICIAL" action="#{c_Usuario.chamaMenuInicial}"></p:menuitem>
+            <p:menuitem value="MENU INICIAL" action="#{usuarioController.chamaMenuInicial}"></p:menuitem>
         </p:menubar>
     </h:form>
     <div class="jumbotron">
         <section alig="center" class="right">
             <h:form>
                 <p:dataTable id="tbl" class="tbl" var="emp"
-                             value="#{c_Emprestimo.consultarMeusEmprestimos()}"
+                             value="#{emprestimoController.consultarMeusEmprestimos()}"
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {Exporters}"
                              paginator="true" rows="5"
                              scrollWidth="1300">
@@ -66,7 +66,8 @@
                     </p:column>
 
                     <p:column headerText="Dt. Dev.">
-                        <h:outputText value="#{emp.datadev}"/>
+                        <h:outputText rendered="#{emp.atrasado == '1'}" style="color: red" value="#{emp.datadev}"/>
+                        <h:outputText rendered="#{emp.atrasado != '1'}" value="#{emp.datadev}"/>
                     </p:column>
 
                 </p:dataTable>
